<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onboardingFragment">

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="fr.antmu.pianopiano.ui.onboarding.OnboardingFragment"
        android:label="@string/onboarding_title"
        tools:layout="@layout/fragment_onboarding">

        <action
            android:id="@+id/action_onboarding_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/mainFragment"
        android:name="fr.antmu.pianopiano.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_main_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="fr.antmu.pianopiano.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

</navigation>
